--- a/backend/EducareBE/EducareBE/appsettings.json
+++ b/backend/EducareBE/EducareBE/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "connString": "Server=educare-server.database.windows.net;Database=AppDb;User Id=unihack-hackathon;password=test123AA!;Trusted_Connection=False;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
