--- a/frontend/educarefront/package.json
+++ b/frontend/educarefront/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "package.json": "^2.0.1",
     "react": "^18.2.0",
@@ -44,6 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "proxy":"https://educare-hackathon.azurewebsites.net"
+    "proxy": "https://educare-hackathon.azurewebsites.net"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.25"
   }
 }
